test/invalid/baseline/stringconstants.txt
Syntax error at line 2 in stringconstants.widl, since `interface Util`:
  const DOMString hello = "world";
        ^ Const lacks a type
